--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,4 +1,4 @@
-header {
+header:not(header.no-inheritance) {
   width: 100%;
   height: fit-content;
   background-image: url("../images/bg_header.png");
