--- a/assets/css/section-noticias.css
+++ b/assets/css/section-noticias.css
@@ -225,6 +225,11 @@ section.noticias > .section-content > .card > .banner + .data-info + .card-conta
   border-radius: 5px;
 }
 
+menu {
+  width: 50%;
+  height: 100vh;
+}
+
 @media screen and (max-width: 710px) {
   .noticias {
     width: 100%;
