--- a/assets/css/section-noticias.css
+++ b/assets/css/section-noticias.css
@@ -70,7 +70,7 @@ section.noticias > .section-content {
   gap: 1rem;
 }
 
-section.noticias > .section-content  .card {
+section.noticias > .section-content .card {
   background-color: #ffffff;
   color: white;
   padding: 1rem;
@@ -78,19 +78,19 @@ section.noticias > .section-content  .card {
   margin: 5px;
   position: relative;
   height: auto;
-  transition: transform .5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
   box-shadow: 3px 6px 9px 1px #060c1821;
 }
 
-section.noticias > .section-content  .card:hover {
+section.noticias > .section-content .card:hover {
   transform: translateY(-13px);
-  transition: transform .5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
-section.noticias > .section-content  .card > .banner {
+section.noticias > .section-content .card > .banner {
   width: 100%;
   height: 10rem;
-  background-image: url('../images/Flag_of_Angola.svg.png');
+  background-image: url("../images/Flag_of_Angola.svg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,13 +98,18 @@ section.noticias > .section-content  .card > .banner {
   left: 0;
   top: 0;
   border-radius: 5px;
-} 
+}
 
 /* section.noticias > .section-content  .card > .banner > .info-container {
   
 } */
 
-section.noticias > .section-content > .card > .banner > .info-container > .info-content {
+section.noticias
+  > .section-content
+  > .card
+  > .banner
+  > .info-container
+  > .info-content {
   position: absolute;
   bottom: 0;
   background-color: var(--color1);
@@ -114,9 +119,15 @@ section.noticias > .section-content > .card > .banner > .info-container > .info-
   cursor: default;
 }
 
-section.noticias > .section-content > .card > .banner > .info-container > .info-content > p {
+section.noticias
+  > .section-content
+  > .card
+  > .banner
+  > .info-container
+  > .info-content
+  > p {
   color: #ffff;
-  font-size: 12px;  
+  font-size: 12px;
   font-weight: 500;
 }
 
@@ -141,25 +152,49 @@ section.noticias > .section-content > .card > .banner + .data-info > img {
   border-radius: 50%;
 }
 
-section.noticias > .section-content > .card > .banner + .data-info > img + time {
+section.noticias
+  > .section-content
+  > .card
+  > .banner
+  + .data-info
+  > img
+  + time {
   font-size: 13px;
   color: var(--color1);
   height: fit-content;
   height: 15px;
 }
 
-section.noticias > .section-content > .card > .banner + .data-info + .card-container {
+section.noticias
+  > .section-content
+  > .card
+  > .banner
+  + .data-info
+  + .card-container {
   /* background-color: deeppink; */
   height: auto;
   margin-top: 12rem;
 }
 
-section.noticias > .section-content > .card > .banner + .data-info + .card-container > .card-content {
+section.noticias
+  > .section-content
+  > .card
+  > .banner
+  + .data-info
+  + .card-container
+  > .card-content {
   position: relative;
   /* bottom: 10rem; */
 }
 
-section.noticias > .section-content > .card > .banner + .data-info + .card-container > .card-content > p {
+section.noticias
+  > .section-content
+  > .card
+  > .banner
+  + .data-info
+  + .card-container
+  > .card-content
+  > p {
   color: var(--color1);
   font-weight: 500;
 }
@@ -176,7 +211,7 @@ section.noticias > .section-content > .card > .banner + .data-info + .card-conta
 #banner2 {
   width: 100%;
   height: 10rem;
-  background-image: url('../images/flag-of-china.png');
+  background-image: url("../images/flag-of-china.png");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -189,7 +224,7 @@ section.noticias > .section-content > .card > .banner + .data-info + .card-conta
 #banner3 {
   width: 100%;
   height: 10rem;
-  background-image: url('../images/flag-of-italy.png');
+  background-image: url("../images/flag-of-italy.png");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -202,7 +237,7 @@ section.noticias > .section-content > .card > .banner + .data-info + .card-conta
 #banner4 {
   width: 100%;
   height: 10rem;
-  background-image: url('../images/flag-of-angola-1.jpg');
+  background-image: url("../images/flag-of-angola-1.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -215,7 +250,7 @@ section.noticias > .section-content > .card > .banner + .data-info + .card-conta
 #banner5 {
   width: 100%;
   height: 10rem;
-  background-image: url('../images/STIPENDIUM\ HUNGARICUM.jpg');
+  background-image: url("../images/STIPENDIUM\ HUNGARICUM.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -254,11 +289,11 @@ menu {
     display: flex;
     justify-content: center;
   }
-  
+
   header > .header-noticias > h1 {
     font-size: 1.5em;
   }
-  
+
   header > .header-noticias > h1 + a {
     display: none;
   }
@@ -281,7 +316,7 @@ menu {
     margin: 3rem;
   }
 
-  section.noticias > .section-content  .card {
+  section.noticias > .section-content .card {
     background-color: #ffffff;
     color: white;
     padding: 1rem;
@@ -290,7 +325,7 @@ menu {
     position: relative;
     width: 25rem;
     height: auto;
-    transition: transform .5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
     box-shadow: 3px 6px 9px 1px #060c1821;
   }
 }
