--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,16 +1,162 @@
 footer {
-    background: #10141a;
-    width: 100%;
-    height: 405px;
-    position: relative;
-    margin-top: 6rem;
-  }
-  
-  .top {
-    background: #10141a;
-    /* position: absolute;
+  background: #10141a;
+  width: 100%;
+  height: 405px;
+  position: relative;
+  margin-top: 6rem;
+}
+
+.top {
+  background: #10141a;
+  /* position: absolute;
     top: 0; */
-    height: 75%;
+  height: 75%;
+  width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.top-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 250px;
+  height: 75%;
+}
+
+.top-content > .supporte {
+  padding: 20px;
+  user-select: none;
+  cursor: default;
+}
+
+.top-content > .supporte > h2 {
+  font-size: 1.1em;
+  font-weight: bolder;
+  margin: 0 0 20px 0;
+}
+
+.top-content > .supporte p {
+  color: rgb(216, 216, 216);
+}
+
+.top-content > .newsletter {
+  user-select: none;
+  cursor: default;
+  position: relative;
+  top: 35px;
+}
+
+.top-content > .newsletter > h2 {
+  font-size: 1.1em;
+  font-weight: bolder;
+  margin: 0 0 10px 0;
+}
+
+.top-content > .newsletter p {
+  font-size: 14px;
+  color: rgb(216, 216, 216);
+  margin: 0 0 10px 0;
+}
+
+.top-content > .newsletter form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.top-content > .newsletter form > label {
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.top-content > .newsletter form input[type="email"] {
+  outline: rgb(216, 216, 216);
+  border: 0.3px solid rgb(126, 126, 126);
+  padding: 8px 20px;
+  border-radius: 4px;
+  background: transparent;
+}
+
+.top-content > .newsletter form > .bottom {
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 64%;
+  height: 100%;
+}
+
+.top-content > .newsletter form > input[type="submit"] {
+  padding: 13px 20px;
+  border-radius: 5px;
+  background-color: #ff1949;
+  outline: none;
+  border: none;
+  color: white;
+  font: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-weight: bold;
+}
+
+.top-content > .newsletter form > input[type="submit"]:hover {
+  background-color: aqua;
+  transition: background-color 0.3s;
+}
+
+.bottom .bottom-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  background-color: #000000;
+  bottom: 0;
+  height: 100px;
+}
+
+.bottom .bottom-content p {
+  cursor: default;
+  font-size: 12px;
+  user-select: none;
+  color: rgb(187, 187, 187);
+  margin: 0 auto;
+}
+
+.bottom .bottom-content button {
+  width: fit-content;
+  height: fit-content;
+  background-color: #000000;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  right: 15px;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.bottom .bottom-content button.btn-move-top {
+  opacity: 1;
+  visibility: visible;
+}
+
+.destaque {
+  font-weight: bold;
+}
+
+.btn-top {
+  width: 25px;
+}
+
+@media screen and (max-width: 847px) {
+  footer {
+    height: auto;
+  }
+
+  .top {
+    height: auto;
     width: 100%;
     margin: 0 auto;
     display: block;
@@ -18,135 +164,14 @@ footer {
   
   .top-content {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 250px;
-    height: 75%;
-    justify-items: center;
+    flex-wrap: wrap;
+    height: auto;
   }
-  
-  .top-content > .supporte {
-    padding: 20px;
-    user-select: none;
-    cursor: default;
-  }
-  
-  .top-content > .supporte > h2 {
-    font-size: 1.1em;
-    font-weight: bolder;
-    margin: 0 0 20px 0;
-  }
-  
-  .top-content > .supporte p {
-    color: rgb(216, 216, 216);
-  }
-  
+
   .top-content > .newsletter {
     user-select: none;
     cursor: default;
     position: relative;
-    top: 35px;
+    top: -7rem;
   }
-  
-  .top-content > .newsletter > h2 {
-    font-size: 1.1em;
-    font-weight: bolder;
-    margin: 0 0 10px 0;
-  }
-  
-  .top-content > .newsletter p {
-    font-size: 14px;
-    color: rgb(216, 216, 216);
-    margin: 0 0 10px 0;
-  }
-  
-  .top-content > .newsletter form {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-  }
-  
-  .top-content > .newsletter form > label {
-    font-size: 12px;
-    font-weight: bold;
-  }
-  
-  .top-content > .newsletter form input[type="email"] {
-    outline: rgb(216, 216, 216);
-    border: 0.3px solid rgb(126, 126, 126);
-    padding: 8px 20px;
-    border-radius: 4px;
-    background: transparent;
-  }
-  
-  .top-content > .newsletter form > .bottom {
-    background-color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 64%;
-    height: 100%;
-  }
-  
-  .top-content > .newsletter form > input[type="submit"] {
-    padding: 13px 20px;
-    border-radius: 5px;
-    background-color: #ff1949;
-    outline: none;
-    border: none;
-    color: white;
-    font: 15px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-weight: bold;
-  }
-  
-  .top-content > .newsletter form > input[type="submit"]:hover {
-    background-color: aqua;
-    transition: background-color 0.3s;
-  }
-  
-  .bottom .bottom-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    position: relative;
-    background-color: #000000;
-    bottom: 0;
-    height: 100px;
-  }
-  
-  .bottom .bottom-content p {
-    cursor: default;
-    font-size: 12px;
-    user-select: none;
-    color: rgb(187, 187, 187);
-    margin: 0 auto;
-  }
-  
-  .bottom .bottom-content button {
-    width: fit-content;
-    height: fit-content;
-    background-color: #000000;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    position: relative;
-    right: 15px;
-    opacity: 0;
-    visibility: hidden;
-  }
-  
-  .bottom .bottom-content button.btn-move-top {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .destaque {
-    font-weight: bold;
-  }
-  
-  .btn-top {
-    width: 25px;
-  }
+}
