BEM no footer do index

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,4 +1,4 @@
-footer {
+.footer {
   background: #10141a;
   width: 100%;
   height: 405px;
@@ -6,7 +6,7 @@ footer {
   margin-top: 6rem;
 }
 
-.top {
+.footer__top {
   background: #10141a;
   /* position: absolute;
     top: 0; */
@@ -16,7 +16,7 @@ footer {
   display: block;
 }
 
-.top-content {
+.top__top-content {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,53 +24,53 @@ footer {
   height: 75%;
 }
 
-.top-content > .supporte {
+.top-content__supporte {
   padding: 20px;
   user-select: none;
   cursor: default;
 }
 
-.top-content > .supporte > h2 {
+.top-content__supporte > h2 {
   font-size: 1.1em;
   font-weight: bolder;
   margin: 0 0 20px 0;
 }
 
-.top-content > .supporte p {
+.top-content__supporte p {
   color: rgb(216, 216, 216);
 }
 
-.top-content > .newsletter {
+.top-content__newsletter {
   user-select: none;
   cursor: default;
   position: relative;
   top: 35px;
 }
 
-.top-content > .newsletter > h2 {
+.top-content__newsletter > h2 {
   font-size: 1.1em;
   font-weight: bolder;
   margin: 0 0 10px 0;
 }
 
-.top-content > .newsletter p {
+.top-content__newsletter p {
   font-size: 14px;
   color: rgb(216, 216, 216);
   margin: 0 0 10px 0;
 }
 
-.top-content > .newsletter form {
+.top-content__newsletter form {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
 }
 
-.top-content > .newsletter form > label {
+.top-content__newsletter form > label {
   font-size: 12px;
   font-weight: bold;
 }
 
-.top-content > .newsletter form input[type="email"] {
+.top-content__newsletter form input[type="email"] {
   outline: rgb(216, 216, 216);
   border: 0.3px solid rgb(126, 126, 126);
   padding: 8px 20px;
@@ -78,7 +78,7 @@ footer {
   background: transparent;
 }
 
-.top-content > .newsletter form > .bottom {
+.top-content__newsletter form > .bottom {
   background-color: #000000;
   display: flex;
   justify-content: center;
@@ -87,7 +87,7 @@ footer {
   height: 100%;
 }
 
-.top-content > .newsletter form > input[type="submit"] {
+.top-content__newsletter form > input[type="submit"] {
   padding: 13px 20px;
   border-radius: 5px;
   background-color: #ff1949;
@@ -100,12 +100,12 @@ footer {
   font-weight: bold;
 }
 
-.top-content > .newsletter form > input[type="submit"]:hover {
+.top-content__newsletter form > input[type="submit"]:hover {
   background-color: aqua;
   transition: background-color 0.3s;
 }
 
-.bottom .bottom-content {
+.bottom__bottom-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -116,7 +116,7 @@ footer {
   height: 100px;
 }
 
-.bottom .bottom-content p {
+.bottom__bottom-content p {
   cursor: default;
   font-size: 12px;
   user-select: none;
@@ -124,7 +124,7 @@ footer {
   margin: 0 auto;
 }
 
-.bottom .bottom-content button {
+.bottom__bottom-content button {
   width: fit-content;
   height: fit-content;
   background-color: #000000;
@@ -137,7 +137,7 @@ footer {
   visibility: hidden;
 }
 
-.bottom .bottom-content button.btn-move-top {
+.bottom__bottom-content button.btn-move-top {
   opacity: 1;
   visibility: visible;
 }
@@ -151,24 +151,24 @@ footer {
 }
 
 @media screen and (max-width: 847px) {
-  footer {
+  .footer {
     height: auto;
   }
 
-  .top {
+  .footer__top {
     height: auto;
     width: 100%;
     margin: 0 auto;
     display: block;
   }
   
-  .top-content {
+  .top__top-content {
     display: flex;
     flex-wrap: wrap;
     height: auto;
   }
 
-  .top-content > .newsletter {
+  .top-content__newsletter {
     user-select: none;
     cursor: default;
     position: relative;
