--- a/assets/css/login-form-section.css
+++ b/assets/css/login-form-section.css
@@ -7,40 +7,40 @@
   --color6: #ff1949;
 }
 
-section#form {
+#form-section {
   width: 100%;
   display: flex;
   align-items: center;
   /* justify-content: center; */
   flex-direction: column;
-  padding: 8rem 0 20rem 0;
+  padding: 8rem 0 30rem 0;
   height: 420.703px;
   /* background-color: rgb(64, 255, 143); */
 }
 
-section#form > h1 {
+section#form-section > h1 {
   font-size: 2em;
   color: var(--color1);
 }
 
-section#form > h1 + form {
+.form {
   width: 30rem;
   /* background-color: #23262c; */
   padding: 2rem;
 }
 
-section#form > h1 + form label[for="emailtxt"], section#form > h1 + form label[for="senhatxt"] {
+.form__label {
   font-size: .8em;
   color: var(--color1);
   font-weight: bolder;
 }
 
-section#form > h1 + form > label[for="emailtxt"]::after, section#form > h1 + form > label[for="senhatxt"]::after {
+.form__label::after {
   content: ' *';
   color: red;
 }
 
-section#form > form > input[type="email"], form > input[type="password"] {
+.form__input {
   border: none;
   outline: none;
   box-shadow: 1px 1px 11px 2px rgba(0, 0, 0, 0.185);
@@ -51,13 +51,12 @@ section#form > form > input[type="email"], form > input[type="password"] {
   transition: border .2s ease-in;
 }
 
-section#form > h1  + form > label + br + input[type="email"]:focus, 
-section#form > h1  + form > label + br + input[type="email"] + label + input[type="password"]:focus {
+.form__input:focus {
   transition: border .2s ease-in;
   border: 1px solid var(--color4);
 }
 
-section#form > h1  + form > label + br + input[type="email"] + label + input[type="password"] + input[type="submit"] {
+.form__submit-buttom {
   width: 100%;
   background-color: #ff1949;
   padding: 13px 20px;
@@ -72,12 +71,12 @@ section#form > h1  + form > label + br + input[type="email"] + label + input[typ
   margin: 10px 0;
 }
 
-section#form > h1  + form > label + br + input[type="email"] + label + input[type="password"] + input[type="submit"]:hover {
+.form__submit-buttom:hover {
   background-color: aqua;
     transition: background-color 0.3s;
 }
 
-.links {
+.form__links {
   /* background-color: #2c3447; */
   height: auto;
   width: 100%;
